--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "io.navendra.helloneon"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -18,6 +18,7 @@ android {
                 cppFlags ""
             }
         }
+        ndk.abiFilters 'armeabi-v7a'
     }
     buildTypes {
         release {
